fixed dark mode issue in browser

--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,7 @@
 }
 
 html {
+  color-scheme: dark;
   scroll-behavior: smooth;
   scroll-padding-top: 6rem;
   hyphens: auto;
